# Chalk

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  omg.bmf  resources.qrc  stressTest.bmf  trig2.bmf  trig2test.bmf
include/: assignmentRepository.hpp  bridge.hpp  changeType.hpp  documentModel.hpp  editor.hpp  graph.hpp  historyDock.hpp  mathinput.hpp  navigator.hpp  page.hpp  pages.hpp  pagesBridge.hpp  treewidget.hpp  types.hpp
include/cmd/: addFormulaCommand.hpp  addTaskCommand.hpp  command.hpp  removeFormulaCommand.hpp  removeTaskCommand.hpp  toggleAnswerCommand.hpp  updateAssignmentTitleCommand.hpp  updateFormulaCommand.hpp  updateTaskTitleCommand.hpp
src/: assignmentRepository.cpp  bridge.cpp  documentModel.cpp  editor.cpp  graph.cpp  historyDock.cpp  main.cpp  mathinput.cpp  navigator.cpp  pagesBridge.cpp
src/cmd/: addFormulaCommand.cpp  addTaskCommand.cpp  removeFormulaCommand.cpp  removeTaskCommand.cpp  toggleAnswerCommand.cpp  updateAssignmentTitleCommand.cpp  updateFormulaCommand.cpp  updateTaskTitleCommand.cpp
web/: bridge.js  bridge.js.old  bridge.js.old2  index.html  mathquill.css  pages.css  pages.html  pagesBridge.js  styles.css
